--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": "14.x"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "dotenv": "^16.3.1",
